Manifests/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: schoolmanagmentsystem-namespace
