Manifests/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-statefulset
  namespace: schoolmanagmentsystem-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-db
  serviceName: database
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
    whenScaled: Delete
  template:
    metadata:
      labels:
        app: student-db
    spec:
      containers:
        - name: web-db
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
              name: student-db
          volumeMounts:
            - name: db-data
              mountPath: /var/opt/mssql
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
