Manifests/sms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app
  namespace: schoolmanagmentsystem-ns
  labels:
    app: mvc-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mvc-app
  minReadySeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mvc-app
    spec:
      containers:
        - name: mvc-app
          image: darkodimitrov/kii_project:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
