Manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: schoolmanagmentsystem-db
  namespace: schoolmanagmentsystem-namespace
spec:
  serviceName: "schoolmanagmentsystem-db"
  replicas: 1
  selector:
    matchLabels:
      app: schoolmanagmentsystem-db
  template:
    metadata:
      labels:
        app: schoolmanagmentsystem-db
    spec:
      containers:
      - name: sql-server
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - mountPath: /var/opt/mssql
          name: mssql-data
  volumeClaimTemplates:
  - metadata:
      name: mssql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
