Manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: schoolmanagmentsystem-ns
spec:
  clusterIP: None
  selector:
    app: student-db
  ports:
    - name: student-db
      protocol: TCP
      port: 84
      targetPort: 1433
