Manifests/sms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-app-service
  namespace: schoolmanagmentsystem-ns
  labels:
    app: mvc-service
spec:
  type: ClusterIP
  selector:
    app: mvc-app
  ports:
    - protocol: TCP
      port: 84
      targetPort: 8001
