Manifests/sms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mvc-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: schoolmanagmentsystem-ns
spec:
  ingressClassName: nginx-example
  rules:
    - host: mvc-web.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mvc-service
                port:
                  number: 84
